2.9.0/todo/result_profiler.md

# Release Notes worksheet profiler

The main goal of this process is to rephrase all the commit messages below to make them **clear and easy to read** by the end user. You should follow the following instructions to do so:

* **Please clean up and format commit titles to be readable by the general PyTorch user.** Make sure you're [following the guidance here](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit)! Your resulting notes must be consistent and easy to read.
* Please sort commits into the following categories (you should not rename the categories!), I tried to pre-sort these to ease your work, feel free to move commits around if the current categorization is not good.
* Anything that is not public facing needs to be removed.
* If anything is miscategorized/belongs to another domain, move it to `miscategorized.md`.
* Please scan through `miscategorized.md` and handle any commits that belong within your domain according to these instructions.
* We place a lot of emphasis on the “BC-breaking” and “deprecation” sections. Those should be where the most effort goes in. The “improvements” and “bug fixes” for Python API should be nice as well.
* Once you are finished, move this very file from `todo/` to `done/` and submit a pull request.

The categories below are as follows:

* BC breaking: All commits that are BC-breaking. These are the most important commits. If any pre-sorted commit is actually BC-breaking, do move it to this section. Each commit should contain a paragraph explaining the rational behind the change as well as an example for how to update user code [BC-Guidelines](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit#heading=h.a9htwgvvec1m).
* Deprecations: All commits introducing deprecation. Each commit should include a small example explaining what should be done to update user code.
* new_features: All commits introducing a new feature (new functions, new submodule, new supported platform etc)
* improvements: All commits providing improvements to existing feature should be here (new backend for a function, new argument, better numerical stability)
* bug fixes: All commits that fix bugs and behaviors that do not match the documentation
* performance: All commits that are added mainly for performance (we separate this from improvements above to make it easier for users to look for it)
* documentation: All commits that add/update documentation
* Developers: All commits that are not end-user facing but still impact people that compile from source, develop into pytorch, extend pytorch, etc
* not user facing: All commits that are not public end-user facing and hence should be dropped from the release notes

## profiler
### bc breaking
### deprecation
### new features
- [Profiler] Add GC Events to Python Stack Tracer ([#161209](https://github.com/pytorch/pytorch/pull/161209))
### improvements
### bug fixes
- [Memory Snapshot] Fix Linter for Global Annotations flag in Snapshot ([#157858](https://github.com/pytorch/pytorch/pull/157858))
### performance
### docs
- [Docs] Update PT2 Profiler Torch-Compiled Region Image ([#158066](https://github.com/pytorch/pytorch/pull/158066))
### devs
### Untopiced
- Add a custom profiler configuration option ([#151656](https://github.com/pytorch/pytorch/pull/151656))
- [profiler] add more CUDA API for kernel launcher ([#156016](https://github.com/pytorch/pytorch/pull/156016))
- Allow Custom Time Unit When Printing Profiler Table ([#157913](https://github.com/pytorch/pytorch/pull/157913))
- [profiler] update CUDA runtime kernel identification logic ([#157890](https://github.com/pytorch/pytorch/pull/157890))
### not user facing
- [MemoryViz] Add file selector button ([#157647](https://github.com/pytorch/pytorch/pull/157647))
- [Easy][Profiler] Fix pattern matcher of profiler ([#157711](https://github.com/pytorch/pytorch/pull/157711))
- [Profiler] the doc of _ExperimentalConfig is incorrectly truncated by commas ([#156586](https://github.com/pytorch/pytorch/pull/156586))
- [Profiler] Fix unexpected C return events ([#159574](https://github.com/pytorch/pytorch/pull/159574))
- [Profiler] Update README ([#159816](https://github.com/pytorch/pytorch/pull/159816))
### security
